--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ecommerce application in headless web architecture",
   "main": "app.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "nodemon app.js"
   },
   "author": "Naveen Micheal",
   "license": "ISC",
